# apps/backend/domain/entities/user.go
@@ -1,6 +1,7 @@
 package entities
 
 import (
+	"chat/domain/valueObject/passwordHash"
 	lib "chat/lib/auth"
 	"time"
 )
@@ -9,7 +10,7 @@ type User struct {
     ID        *uint
     Name      string
     Email     string
-    Password  string
+    Password  *passwordHash.PasswordHash
     UpdatedAt time.Time
 }
 
@@ -17,33 +18,18 @@ func (User) TableName() string {
     return "users"
 }
 
-func NewUser(name, email, plainPassword string) (*User, error) {
-    hashed, err := lib.Hash(plainPassword)
-    if err != nil {
-        return nil, err
-    }
-    return &User{
+func NewUser(name, email string, password *passwordHash.PasswordHash) User {
+    return User{
         Name:     name,
         Email:    email,
-        Password: hashed,
-    }, nil
+        Password: password,
+    }
 }
 
 func (u *User) Update() {
     u.UpdatedAt = time.Now()
 }
 
-
-func (u *User) UpdatePassword(plainPassword string) error {
-    hashed, err := lib.Hash(plainPassword)
-    if err != nil {
-        return err
-    }
-    u.Password = hashed
-    return nil
-}
-
-
-func (u *User) CheckPassword(plainPassword string) bool {
-    return lib.Verify(u.Password, plainPassword)
+func (p *User) Verify(plainPassword string) bool {
+	return lib.Verify(p.Password.ToString(), plainPassword)
 }
